# api_ml_models

./: .env.example  README.md  pyproject.toml  requirements.txt
fast-api-celery/: run.sh
fast-api-celery/api/: main.py  models.py
fast-api-celery/logic/: model.py
fast-api-celery/worker/: celery.py  tasks.py
